Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107609

qmltc: fix type import and resolution issues in examples

XMLWordPrintable

      The type resolution with QQmlJSScope::resolveType is not working correctly and fails in multiple parts. This task collects all tasks related to importing and resolving types correctly.

      The goal is to be able to compile qml files importing QtQuick and QtQml without resolution errors.

        For Gerrit Dashboard: QTBUG-107609
        # Subject Branch Project Status CR V

            sami.shalayel Sami Shalayel
            sami.shalayel Sami Shalayel
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:

                There are no open Gerrit changes